assets/styles/landing.css
/* General styles */
:root {
    --mov_color: rgb(123, 123, 223);
    --bg-color: rgb(40, 40, 74);
    --txt-color: rgb(255, 255, 255);
    --task-color: rgb(51, 51, 92);
}

/* body styles */
body {
    background-color: var(--bg-color);
}
/* new task design */
.newTask {
    background-color: var(--mov_color);
    border-radius: 15px;
    padding: 3px;
}

/* header styles */
header {
    display: flex;
    justify-content: space-between;
    height: 50px;
    background-color: var(--task-color);
    color: var(--txt-color);
}

header h1 {
    font-size: 20pt;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    margin: auto 2px;
}

header p.newTask {
    margin: auto 2px;
    cursor: pointer;
}

.logo {
    display: flex;
    width: 500px;
    justify-content: space-between;
}
.logo .logo_item1 {
    margin-right: 4px;
}

.task_aside {
    overflow-x: auto;
    overflow-y: hidden;
}

/* side bar styles */
.sidebar_section {
    display: flex;
}
.side_bar {
    min-width: 250px;
    margin-top: -50px;
    opacity: 1;
    height: 100vh;
    border-right: 1px solid rgba(250, 250, 250, 0.085);
}
.list-group {
    height: 100%;
    background-color: var(--task-color);
}

.list-group .last {
    margin-top: auto;
}
.list-group-item {
    border: none;
    cursor: pointer;
    background-color: var(--task-color);
    color: var(--txt-color);
}
.boardlinks:hover {
    width: 90%;
    border-bottom-right-radius: 40px;
    border-top-right-radius: 40px;
    background-color: var(--mov_color);
}
a:hover {
    text-decoration: none;
    color: var(--txt-color);
}
.list-group .logo_item1 {
    font-size: 20pt;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    margin: auto 2px;
}
.list-group .list-group-item.active {
    width: 90%;
    border-bottom-right-radius: 40px;
    border-top-right-radius: 40px;
    background-color: var(--mov_color);
}


/* task aside styles */
.task_aside {
    margin-left: 10px;
    display: flex;
}

.task_aside-item {
    margin-right: 20px;
}

/* styles for each task */
.task {
    min-width: 270px;
    max-width: 230px;
    max-height: 100px;
    height: 80px;
    padding: 10px;
    margin-bottom: 10px;
    background-color: var(--task-color);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    cursor: pointer;
}
.task_aside1 .fa-circle {
    color:rgb(106, 185, 246);
}

.task_aside2 .fa-circle {
    color: var(--mov_color);
}
.task_aside3 .fa-circle {
    color: rgb(19, 85, 19);
}

.task p {
    color: var(--txt-color);
}
aside p {
    color: rgba(255, 255, 255, 0.41);
}

